--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,8 @@
 <h1>Users</h1>
 
 <ul *ngIf="users">
-  <li>Youpi</li>
-  <li *ngFor="let user of users.data">
+  <li *ngFor="let user of users._embedded.people">
     <img [src]="user.avatar">
-    <p>{{ user.first_name }} {{ user.last_name }}</p>
+    <p>{{ user.firstName }} {{ user.lastName }}</p>
   </li>
 </ul>
